// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. initial load (just import) : 1. initial load (just import)  1`] = `

import tw from 'twin.macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros 1. multiple transforms 20 classes: 1. multiple transforms 20 classes 1`] = `

import tw from 'twin.macro';
const css1 = tw\`\`;
const css2 = tw\`\`;
const css3 = tw\`\`;
const css4 = tw\`\`;
const css5 = tw\`\`;
const css6 = tw\`\`;
const css7 = tw\`\`;
const css8 = tw\`\`;
const css9 = tw\`\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css1 = {};
const css2 = {};
const css3 = {};
const css4 = {};
const css5 = {};
const css6 = {};
const css7 = {};
const css8 = {};
const css9 = {};


`;

exports[`macros 1. test 0 classes             : 1. test 0 classes              1`] = `

import tw from 'twin.macro';
const css = tw\`\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {};


`;

exports[`macros 2. initial load (just import) : 2. initial load (just import)  1`] = `

import tw from '@tailwindcssinjs/macro';

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros 2. multiple transforms 20 classes: 2. multiple transforms 20 classes 1`] = `

import tw from '@tailwindcssinjs/macro';
const css1 = tw\`\`;
const css2 = tw\`\`;
const css3 = tw\`\`;
const css4 = tw\`\`;
const css5 = tw\`\`;
const css6 = tw\`\`;
const css7 = tw\`\`;
const css8 = tw\`\`;
const css9 = tw\`\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css1 = {};
const css2 = {};
const css3 = {};
const css4 = {};
const css5 = {};
const css6 = {};
const css7 = {};
const css8 = {};
const css9 = {};


`;

exports[`macros 2. test 0 classes             : 2. test 0 classes              1`] = `

import tw from '@tailwindcssinjs/macro';
const css = tw\`\`;

      ↓ ↓ ↓ ↓ ↓ ↓

const css = {};


`;
